# moon

./: .gitignore  Makefile  README.org  cabal.project  conflicts.org  default.nix  lift-frp-network-flowchart.graphml  nsh  nsh.posix  picture.org
api-definition/: LICENSE
common/: .dir-locals.el  CHANGELOG.md  Makefile  cabal.project  common.cabal  packages.nix
common/api-definition/: luna-api-definition.cabal
common/src/: Basis.hs  Ground.hs  Namespace.hs  Pipe.hs  SomeType.hs  SomeValue.hs  Type.hs
common/src/Attic/: CheckAndInfer.hs  ExprTyped.hs  Pipe.hs  SomeValue.hs  Typeable.hs
common/src/Data/: Class.hs  Dict.hs  IntUnique.hs  Orphanage.hs  Parsing.hs  RTTI.hs  Shelf.hs  Some.hs  TH.hs  TyDict.hs  TypeRep.hs
common/src/Data/Type/: List.hs
common/src/Debug/: ImportHidden.hs  TraceErr.hs
common/src/Dom/: CTag.hs  Cap.hs  Command.hs  Cred.hs  Error.hs  Expr.hs  Ground.hs  LTag.hs  Located.hs  Name.hs  Parse.hs  Parsers.hs  Pipe.hs  Reflex.hs  Representable.hs  RequestReply.hs  Result.hs  Scope.hs  Sig.hs  Some.hs  SomePipe.hs  SomeType.hs  SomeVTag.hs  SomeValue.hs  Space.hs  Struct.hs  Tags.hs  VTag.hs  Value.hs
common/src/Dom/Ground/: Cabal.hs  Hask.hs
common/src/Dom/Pipe/: Constr.hs  EPipe.hs  IOA.hs  Ops.hs  Pipe.hs  SomePipe.hs
common/src/Dom/Pipe/Ops/: Apply.hs  Compose.hs  Traverse.hs
common/src/Dom/Scope/: ADTPipe.hs  SomePipe.hs
common/src/Dom/SomePipe/: SomePipe.hs  Tools.hs
common/src/Dom/Space/: Pipe.hs  SomePipe.hs
common/src/Generics/SOP/: Mapping.hs  Some.hs  Traversal.hs
common/src/Ground/: Expr.hs  Hask.hs  Parser.hs  Reflection.hs  TH.hs  Table.hs
common/src/Moon/: Face.hs  Peer.hs  Pipe.hs  Protocol.hs  Reflection.hs
common/src/Moon/Face/: Ground.hs  Haskell.hs
common/src/Network/TypedProtocol/: Core.hs
common/src/Pipe/: Expr.hs  ExprTyped.hs  Ops.hs  Pipe.hs  PipeSpace.hs  Scope.hs  SomePipe.hs  Space.hs  Types.hs  Zipper.hs
common/src/Pipe/Ops/: Apply.hs  Base.hs  Compose.hs  Internal.hs  Traverse.hs
common/src/Wire/: MiniProtocols.hs  Peer.hs  Protocol.hs  WSS.hs
common/src/Wire/WSS/: Bearer.hs
lib/: frontend-common.cabal  luna-visualizers.js
lib/src/Common/: Analytics.hs  Prelude.hs  Report.hs
lib/src/Searcher/: Engine.hs
lib/src/Searcher/Data/: Class.hs  Result.hs
lift/: .dir-locals.el  .ghci  .ghci.parse  Execution.hs  MainCLI.hs  MainLift.hs  MainReflexVty.hs  MainTUI.hs  MainXP.hs  Makefile  cabal.project  lift.cabal  packages.nix  shell.nix
lift/src/: CLI.hs  Execution.hs  Lift.hs  TUI.hs  TopHandler.hs
lift/src/Data/Text/: Extra.hs
lift/src/Data/Text/Zipper/: Extra.hs
lift/src/Debug/: Reflex.hs  TraceErr.hs
lift/src/Lift/: Hackage.hs  Haskell.hs  Orphanage.hs  Pipe.hs  Server.hs
lift/src/Reflex/: SomeValue.hs
lift/src/Reflex/Lift/: Host.hs
lift/src/Reflex/Vty/Widget/: Extra.hs  Selector.hs
lift/src/Reflex/Vty/Widget/Input/: RichText.hs
moon/: CHANGELOG.md  Main.hs  default.nix  moon.cabal  shell.nix
moon-lift/: .dir-locals.el  CLI.hs  Exp.hs  ExpMod.hs  moon-lift.cabal  packages.nix
moon-lift/src/Moon/: CLI.hs  Lift.hs  Pipe.hs
moon-lift/src/Moon/Lift/: Hackage.hs  Haskell.hs
moon/nix/: overrides.nix
moon/src/Moon/: Face.hs  Lift.hs
moon/src/Moon/Face/: Haskell.hs
moon/src/Moon/Lift/: Haskell.hs
nix/: default-compiler.nix  filtersrc.nix  overrides.nix  sources.json
node-editor/: .gitignore  Makefile  cabal.project  env-node-editor.ghcjs  exp.hs  index.html  node-editor.cabal  node-editor.jsexe  package-lock.json  package.json  rollup.config.js  run-browserify.js
node-editor-view/: luna-node-editor-view.cabal
node-editor-view/src/NodeEditor/React/View/: App.hs  Searcher.hs
node-editor/js/: analytics.coffee  atom-callback.js  browserified.js  bundle.js  lexer-classes.js  lib-suffix-dynamic.js  lib-suffix-dynamic.suffix.js  lib-suffix-static.js  luna-visualizers.js  pre-browserified.js  rollup.out.js  visualizers
node-editor/src/: Main.hs
node-editor/src/JS/: Atom.hs
node-editor/src/JavaScript/: Blob.hs  WebSockets.hs
node-editor/src/JavaScript/WebSockets/: FFI.hs  Internal.hs
node-editor/src/Lift/: Client.hs  Event.hs  Searcher.hs  Types.hs
node-editor/src/NodeEditor/Action/: Basic.hs  Searcher.hs  UUID.hs
node-editor/src/NodeEditor/Action/Basic/: UpdateSearcherHints.hs
node-editor/src/NodeEditor/Data/: Color.hs
node-editor/src/NodeEditor/Event/: Atom.hs  Batch.hs  Connection.hs  Event.hs  Filter.hs  KeyMap.hs  Loop.hs  Processor.hs  Shortcut.hs  Source.hs  UI.hs
node-editor/src/NodeEditor/Event/Preprocessor/: Shortcut.hs
node-editor/src/NodeEditor/Handler/: App.hs  Searcher.hs
node-editor/src/NodeEditor/Handler/Backend/: Graph.hs
node-editor/src/NodeEditor/React/: Store.hs
node-editor/src/NodeEditor/React/Model/: Searcher.hs
node-editor/src/NodeEditor/React/Model/Searcher/: Hint.hs
node-editor/src/NodeEditor/React/View/: App.hs  NodeEditor.hs  Searcher.hs
node-editor/src/NodeEditor/State/: Action.hs  Global.hs
node-editor/styles/: _searcher.less  app.css
