cabal-version:       2.4
name:                common
version:             0.1.0.0
synopsis:            Experiments
homepage:            https://github.com/deepfire/moon
license:             GPL-3.0-only
license-file:        LICENSE
author:              Kosyrev Serge
maintainer:          kosyrev.serge@protonmail.com
category:            System
extra-source-files:  CHANGELOG.md

library
  ghc-options:         -j3 +RTS -A128m -n2m -qg -RTS

  exposed-modules:
                       Data.Dict
                       Data.Orphanage
                       Data.Parsing
                       Data.RTTI
                       Data.Some
                       Debug.TraceErr

                       Generics.SOP.Mapping
                       Generics.SOP.Some
                       Generics.SOP.Traversal

                       Ground.Hask
                       Ground.Parser
                       -- Ground.Reflection
                       Ground.Table

                       Pipe.Expr
                       Pipe.Ops
                       Pipe.Scope
                       Pipe.Space
                       Pipe.Types
                       Pipe.Zipper

                       Wire.Peer
                       Wire.Protocol

                       Basis
                       Ground
                       Namespace
                       Pipe
                       Type

                       -- Network.TypedProtocol.Channel
                       -- Network.TypedProtocol.Codec
                       -- Network.TypedProtocol.Codec.Cbor
                       -- Network.TypedProtocol.Core
                       -- Network.TypedProtocol.Driver
                       -- Network.TypedProtocol.Pipelined

  build-depends:       base
                     , algebraic-graphs
                     , binary
                     , bytestring
                     , cborg
                     , containers
                     , deepseq
                     , either
                     , extra
                     , fclabels
                     , fingertree
                     , generic-monoid
                     , generics-sop
                     , ghc-prim
                     , megaparsec
                     , parsers-megaparsec
                     , monoidal-containers
                     , optparse-applicative
                     , parsers
                     , reflection
                     , serialise
                     , set-monad
                     , sop-core
                     , text
                     , witherable
                     , zippers

                     , contra-tracer
                     , io-sim-classes
                     , typed-protocols
                     , typed-protocols-cbor

                     , time

  hs-source-dirs:      src
  default-language:    Haskell2010

  extensions:          AllowAmbiguousTypes
                       BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DerivingVia
                       DuplicateRecordFields
                       EmptyCase
                       ExplicitNamespaces
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralisedNewtypeDeriving
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       NamedFieldPuns
                       NoMonomorphismRestriction
                       OverloadedLabels
                       OverloadedStrings
                       PackageImports
                       PartialTypeSignatures
                       PatternSynonyms
                       QuantifiedConstraints
                       RankNTypes
                       RecordWildCards
                       RecursiveDo
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeInType
                       TypeOperators
                       TypeSynonymInstances
                       UndecidableInstances
                       -- UndecidableSuperClasses
                       ViewPatterns
