cabal-version:       2.4
name:                common
version:             0.1.0.0
synopsis:            Experiments
homepage:            https://github.com/deepfire/moon
license:             GPL-3.0-only
license-file:        LICENSE
author:              Kosyrev Serge
maintainer:          kosyrev.serge@protonmail.com
category:            System
extra-source-files:  CHANGELOG.md

library
  ghc-options:         -j3 -fprint-explicit-kinds -fprint-explicit-foralls +RTS -A128m -n2m -qg -RTS

  exposed-modules:
                       Data.Dict
                       Data.Orphanage
                       Data.Parsing
                       Data.RTTI
                       Data.Type.List
                       Data.TypeRep
                       Debug.TraceErr

                       Dom.CTag
                       Dom.Expr
                       Dom.Ground
                       Dom.Located
                       Dom.Name
                       Dom.Parse
                       Dom.Parsers
                       Dom.Representable
                       Dom.Some
                       Dom.SomeType
                       Dom.SomeVTag
                       Dom.SomeValue
                       Dom.Tags
                       Dom.VTag
                       Dom.Value

                       Generics.SOP.Mapping
                       Generics.SOP.Some
                       Generics.SOP.Traversal

                       Ground.Expr
                       Ground.Hask
                       Ground.Parser
                       Ground.Table

                       Pipe.Ops
                       Pipe.Ops.Apply
                       Pipe.Ops.Base
                       Pipe.Ops.Compose
                       Pipe.Ops.Internal
                       Pipe.Ops.Traverse
                       Pipe.Pipe
                       Pipe.PipeSpace
                       Pipe.Scope
                       Pipe.SomePipe
                       Pipe.Space
                       Pipe.Types
                       Pipe.Zipper

                       Wire.Peer
                       Wire.Protocol

                       Basis
                       Ground
                       Namespace
                       Pipe

                       -- Network.TypedProtocol.Channel
                       -- Network.TypedProtocol.Codec
                       -- Network.TypedProtocol.Codec.Cbor
                       -- Network.TypedProtocol.Core
                       -- Network.TypedProtocol.Driver
                       -- Network.TypedProtocol.Pipelined

  build-depends:       base
                     , algebraic-graphs
                     , assoc
                     , binary
                     , bytestring
                     , cborg
                     , containers
                     , deepseq
                     , dependent-map
                     , dependent-sum
                     , either
                     , extra
                     , fclabels
                     , fingertree
                     , generic-monoid
                     , generics-sop
                     , ghc-prim
                     , hashable
                     , megaparsec
                     , parsers-megaparsec
                     , monoidal-containers
                     , optparse-applicative
                     , parsers
                     , reflection
                     , serialise
                     , set-monad
                     , sop-core
                     , stm
                     , template-haskell
                     , text
                     , text-builder
                     , unordered-containers
                     , vector
                     -- , type-list
                     , witherable
                     -- , zippers

                     , contra-tracer
                     , io-sim-classes
                     , typed-protocols
                     , typed-protocols-examples
                     -- , typed-protocols-cbor

                     , time

  hs-source-dirs:      src
  default-language:    Haskell2010

  default-extensions:  AllowAmbiguousTypes
                       BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DerivingVia
                       DuplicateRecordFields
                       EmptyCase
                       ExplicitNamespaces
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralisedNewtypeDeriving
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       NamedFieldPuns
                       NoMonomorphismRestriction
                       OverloadedLabels
                       OverloadedStrings
                       PackageImports
                       PartialTypeSignatures
                       PatternSynonyms
                       QuantifiedConstraints
                       RankNTypes
                       RecordWildCards
                       RecursiveDo
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeInType
                       TypeOperators
                       TypeSynonymInstances
                       -- UndecidableInstances
                       -- UndecidableSuperClasses
                       ViewPatterns
