cabal-version:       2.4
name:                common
version:             0.1.0.0
synopsis:            Experiments
homepage:            https://github.com/deepfire/moon
license:             GPL-3.0-only
license-file:        LICENSE
author:              Kosyrev Serge
maintainer:          kosyrev.serge@protonmail.com
category:            System
extra-source-files:  CHANGELOG.md

library
  ghc-options:         -j3 -fprint-explicit-kinds -fprint-explicit-foralls -Wno-unticked-promoted-constructors +RTS -A128m -n2m -qg -RTS

  exposed-modules:
                       Data.Dict
                       Data.Orphanage
                       Data.Parsing
                       Data.RTTI
                       Data.Type.List
                       Data.TypeRep
                       Debug.TraceErr

                       Generics.SOP.Mapping
                       Generics.SOP.Some
                       Generics.SOP.Traversal

                       Dom.CTag
                       Dom.Error
                       Dom.Expr
                       Dom.Ground
                       Dom.Ground.Hask
                       Dom.Located
                       Dom.Name
                       Dom.Parse
                       Dom.Parsers
                       Dom.Pipe
                       Dom.Pipe.EPipe
                       Dom.Pipe.Ops
                       Dom.Pipe.Ops.Apply
                       Dom.Pipe.Ops.Compose
                       Dom.Pipe.Ops.Traverse
                       Dom.Pipe.Constr
                       Dom.Pipe.IOA
                       Dom.Pipe.SomePipe
                       Dom.Representable
                       Dom.RequestReply
                       Dom.Scope
                       Dom.Scope.ADTPipe
                       Dom.Scope.SomePipe
                       Dom.Sig
                       Dom.Some
                       Dom.SomeType
                       Dom.SomeVTag
                       Dom.SomeValue
                       Dom.Space
                       Dom.Space.Pipe
                       Dom.Space.SomePipe
                       Dom.Struct
                       Dom.Tags
                       Dom.Value
                       Dom.VTag

                       Ground.Expr
                       Ground.Table

                       Wire.Peer
                       Wire.Protocol

                       Basis

                       -- Network.TypedProtocol.Channel
                       -- Network.TypedProtocol.Codec
                       -- Network.TypedProtocol.Codec.Cbor
                       -- Network.TypedProtocol.Core
                       -- Network.TypedProtocol.Driver
                       -- Network.TypedProtocol.Pipelined

  build-depends:       base
                     , algebraic-graphs
                     , assoc
                     , binary
                     , bytestring
                     , cborg
                     , containers
                     , deepseq
                     , dependent-map
                     , dependent-sum
                     , either
                     , extra
                     , fclabels
                     , fingertree
                     , generic-monoid
                     , generics-sop
                     , ghc-prim
                     , hashable
                     , megaparsec
                     , parsers-megaparsec
                     , monoidal-containers
                     , optparse-applicative
                     , parsers
                     , quiet
                     , reflection
                     , serialise
                     , set-monad
                     , sop-core
                     , stm
                     , template-haskell
                     , text
                     , text-builder
                     , these
                     , transformers
                     , transformers-except
                     , unordered-containers
                     , vector
                     -- , type-list
                     , witherable
                     -- , zippers

                     , contra-tracer
                     , io-sim-classes
                     , typed-protocols
                     , typed-protocols-examples
                     -- , typed-protocols-cbor

                     , time

  hs-source-dirs:      src
  default-language:    Haskell2010

  default-extensions:  AllowAmbiguousTypes
                       BangPatterns
                       BlockArguments
                       ConstraintKinds
                       DataKinds
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DerivingVia
                       DuplicateRecordFields
                       EmptyCase
                       ExplicitNamespaces
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralisedNewtypeDeriving
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       NamedFieldPuns
                       NoMonomorphismRestriction
                       OverloadedLabels
                       OverloadedStrings
                       PackageImports
                       PartialTypeSignatures
                       PatternSynonyms
                       QuantifiedConstraints
                       RankNTypes
                       RecordWildCards
                       RecursiveDo
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeInType
                       TypeOperators
                       TypeSynonymInstances
                       -- UndecidableInstances
                       -- UndecidableSuperClasses
                       ViewPatterns
