cabal-version:       2.4
name:                lift
version:             0.1.0.0
synopsis:            Experiments
homepage:            https://github.com/deepfire/moon
license:             GPL-3.0-only
license-file:        LICENSE
author:              Kosyrev Serge
maintainer:          kosyrev.serge@protonmail.com
category:            System
extra-source-files:  CHANGELOG.md

library
  ghc-options:         -j3 +RTS -A128m -n2m -qg -RTS

  exposed-modules:
                       Data.Text.Extra
                       Data.Text.Zipper.Extra
                       Debug.Reflex
                       Lift
                       Lift.Haskell
                       Lift.Hackage
                       Lift.Orphanage
                       Lift.Pipe
                       Reflex.Vty.Widget.Extra
                       Reflex.Vty.Widget.Input.RichText
                       -- TUI

  build-depends:       common

                     , base
                     , binary
                     , bytestring
                     , Cabal
                     , containers
                     , data-default
                     , extra
                     , filepath
                     , fingertree
                     , generic-monoid
                     , megaparsec
                     , parsers-megaparsec
                     , optparse-applicative
                     , req
                     , safe
                     , set-monad
                     , semialign
                     , stm
                     , text
                     , these
                     , time
                     , tuple
                     -- , type-list
                     , witherable
                     , zippers

                     , algebraic-graphs
                     , cborg
                     , generics-sop
                     , serialise

                     , cached-io
                     , ghc
                     , ghc-boot
                     , ghc-prim
                     , hackage-db
                     , process
                     , shelly
                     , websockets

                     , contra-tracer
                     , io-sim-classes
                     -- , iohk-monitoring -- either this, or reflex-platform
                     , typed-protocols
                     , typed-protocols-examples

                     , reflex
                     , reflex-vty

                     , async
                     , comonad
                     , free
                     , unagi-chan
                     , vector
                     , vty

                     -- , zeromq4-haskell

  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options:       -O0

  extensions:          AllowAmbiguousTypes
                       BangPatterns
                       ConstraintKinds
                       -- CPP
                       DataKinds
                       -- DeriveAnyClass
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DerivingVia
                       DuplicateRecordFields
                       EmptyCase
                       ExplicitNamespaces
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralisedNewtypeDeriving
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       NamedFieldPuns
                       NoMonomorphismRestriction
                       OverloadedLabels
                       OverloadedStrings
                       PackageImports
                       PartialTypeSignatures
                       PatternSynonyms
                       QuantifiedConstraints
                       RankNTypes
                       RecordWildCards
                       RecursiveDo
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeInType
                       TypeOperators
                       TypeSynonymInstances
                       UndecidableInstances
                       UndecidableSuperClasses
                       ViewPatterns

executable lift
  default-language:    Haskell2010
  ghc-options:         -threaded
  hs-source-dirs:      .
  main-is:             MainLift.hs
  build-depends:       common
                     , lift

                     , base
                     , containers
                     , monoidal-containers
                     , parsec
                     , reflex-vty
                     , unagi-chan

executable cli
  default-language:    Haskell2010
  ghc-options:         -threaded
  hs-source-dirs:      .
  main-is:             MainCLI.hs
  build-depends:       common
                     , lift
                     , base
                     , bytestring
                     , containers
                     , contra-tracer
                     , fingertree
                     , io-sim-classes
                     , monoidal-containers
                     , optparse-applicative
                     , parsec
                     , reflex
                     , reflex-vty
                     , safe
                     , serialise
                     , set-monad
                     , shelly
                     , text
                     , tuple
                     , typed-protocols
                     , typed-protocols-examples
                     , unagi-chan
                     , vty
                     , websockets
                     , zippers

  extensions:          AllowAmbiguousTypes
                       BangPatterns
                       ConstraintKinds
                       -- CPP
                       DataKinds
                       -- DeriveAnyClass
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DerivingVia
                       DuplicateRecordFields
                       EmptyCase
                       ExplicitNamespaces
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralisedNewtypeDeriving
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       NamedFieldPuns
                       NoMonomorphismRestriction
                       OverloadedLabels
                       OverloadedStrings
                       PackageImports
                       PartialTypeSignatures
                       PatternSynonyms
                       QuantifiedConstraints
                       RankNTypes
                       RecordWildCards
                       RecursiveDo
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeInType
                       TypeOperators
                       TypeSynonymInstances
                       UndecidableInstances
                       UndecidableSuperClasses
                       ViewPatterns
