cabal-version:       2.4
name:                lift
version:             0.1.0.0
synopsis:            Experiments
homepage:            https://github.com/deepfire/moon
license:             GPL-3.0-only
license-file:        LICENSE
author:              Kosyrev Serge
maintainer:          kosyrev.serge@protonmail.com
category:            System
extra-source-files:  CHANGELOG.md

library
  ghc-options:         -j3 -Wno-unticked-promoted-constructors +RTS -A128m -n2m -qg -RTS

  exposed-modules:
                       -- for Lift.main
                       Lift

                       -- for TUI:
                       Data.Text.Extra
                       Data.Text.Zipper.Extra
                       Debug.Reflex

                       Execution

                       Lift.Pipe

                       Reflex.SomeValue
                       Reflex.Vty.Widget.Extra
                       Reflex.Vty.Widget.Selector
                       Reflex.Vty.Widget.Input.RichText
  other-modules:
                       Lift.Haskell
                       Lift.Hackage
                       Lift.Orphanage
                       TopHandler

  build-depends:       common

                     , base
                     , binary
                     , bytestring
                     , Cabal
                     , containers
                     , data-default
                     , dependent-map
                     , dependent-sum
                     , extra
                     , filepath
                     , fingertree
                     , generic-monoid
                     , megaparsec
                     , optparse-applicative
                     , parsers-megaparsec
                     , quiet
                     , req
                     , safe
                     , set-monad
                     , semialign
                     , stm
                     , text
                     , these
                     , time
                     , transformers
                     , transformers-except
                     , tuple
                     -- , type-list
                     , witherable
                     , zippers

                     , algebraic-graphs
                     , cborg
                     , generics-sop
                     , serialise

                     , cached-io
                     , ghc
                     , ghc-boot
                     , ghc-prim
                     , hackage-db
                     , process
                     , shelly
                     , template-haskell
                     , websockets

                     , contra-tracer
                     , io-sim-classes
                     -- , iohk-monitoring -- either this, or reflex-platform
                     , typed-protocols
                     , typed-protocols-examples

                     , reflex
                     , reflex-vty

                     , async
                     , comonad
                     , free
                     , unagi-chan
                     , vector
                     , vty

                     -- , zeromq4-haskell

  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options:       -O0

  default-extensions:  AllowAmbiguousTypes
                       BangPatterns
                       BlockArguments
                       ConstraintKinds
                       -- CPP
                       DataKinds
                       -- DeriveAnyClass
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DerivingVia
                       DuplicateRecordFields
                       EmptyCase
                       ExplicitNamespaces
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralisedNewtypeDeriving
                       ImportQualifiedPost
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       MultiWayIf
                       NamedFieldPuns
                       NoMonomorphismRestriction
                       OverloadedLabels
                       OverloadedStrings
                       PackageImports
                       PartialTypeSignatures
                       PatternSynonyms
                       QuantifiedConstraints
                       RankNTypes
                       RecordWildCards
                       RecursiveDo
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeInType
                       TypeOperators
                       TypeSynonymInstances
                       UndecidableInstances
                       UndecidableSuperClasses
                       ViewPatterns

executable lift
  default-language:    Haskell2010
  ghc-options:         -threaded -Wno-unticked-promoted-constructors
  hs-source-dirs:      .
  main-is:             MainLift.hs
  build-depends:       common
                     , lift

                     , base
                     , containers
                     , monoidal-containers
                     , parsec
                     , reflex-vty
                     , unagi-chan

executable xp
  default-language:    Haskell2010
  ghc-options:         -threaded -Wno-unticked-promoted-constructors
  hs-source-dirs:      .
  main-is:             MainXP.hs
  build-depends:       common
                     , lift
                     , async
                     , base
                     , containers
                     , optparse-applicative
                     , reflex
                     , reflex-vty
                     , text
                     , vty
  default-extensions:  AllowAmbiguousTypes
                       BangPatterns
                       BlockArguments
                       ConstraintKinds
                       -- CPP
                       DataKinds
                       -- DeriveAnyClass
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DerivingVia
                       DuplicateRecordFields
                       EmptyCase
                       ExplicitNamespaces
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralisedNewtypeDeriving
                       ImportQualifiedPost
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       MultiWayIf
                       NamedFieldPuns
                       NoMonomorphismRestriction
                       OverloadedLabels
                       OverloadedStrings
                       PackageImports
                       PartialTypeSignatures
                       PatternSynonyms
                       QuantifiedConstraints
                       RankNTypes
                       RecordWildCards
                       RecursiveDo
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeInType
                       TypeOperators
                       TypeSynonymInstances
                       UndecidableInstances
                       UndecidableSuperClasses
                       ViewPatterns

executable cli
  default-language:    Haskell2010
  ghc-options:         -threaded -Wno-unticked-promoted-constructors
  hs-source-dirs:      .
  main-is:             MainCLI.hs
  build-depends:       common
                     , lift
                     , async
                     , base
                     , bytestring
                     , containers
                     , contra-tracer
                     , dependent-map
                     , dependent-sum
                     , fingertree
                     , io-sim-classes
                     , megaparsec
                     , monoidal-containers
                     , optparse-applicative
                     , parsec
                     , parsers
                     , parsers-megaparsec
                     , reflex
                     , reflex-vty
                     , safe
                     , semialign
                     , serialise
                     , set-monad
                     , shelly
                     , stm
                     , text
                     , tuple
                     , typed-protocols
                     , typed-protocols-examples
                     , unagi-chan
                     , vector
                     , vty
                     , websockets
                     , zippers

  default-extensions:  AllowAmbiguousTypes
                       BangPatterns
                       BlockArguments
                       ConstraintKinds
                       -- CPP
                       DataKinds
                       -- DeriveAnyClass
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DerivingVia
                       DuplicateRecordFields
                       EmptyCase
                       ExplicitNamespaces
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralisedNewtypeDeriving
                       ImportQualifiedPost
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       MultiWayIf
                       NamedFieldPuns
                       NoMonomorphismRestriction
                       OverloadedLabels
                       OverloadedStrings
                       PackageImports
                       PartialTypeSignatures
                       PatternSynonyms
                       QuantifiedConstraints
                       RankNTypes
                       RecordWildCards
                       RecursiveDo
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeInType
                       TypeOperators
                       TypeSynonymInstances
                       UndecidableInstances
                       UndecidableSuperClasses
                       ViewPatterns
